--- a/css/index.css
+++ b/css/index.css
@@ -156,13 +156,19 @@ margin-top: 50px;
 #skills{
     padding: 20px;
 }
-
-.projects-section {
+#projects{
     display:flex;
     background-color: #fff;
     max-width: 1200px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    flex-wrap: wrap;
+
+}
+.projects-section {
+    display: flex;
+    flex-wrap: wrap;
+    
 }
 
 .projects-section h2 {
@@ -171,17 +177,17 @@ margin-top: 50px;
 }
 
 .project-card {
-    display: flex;
-    flex-wrap: wrap;
+   
     background-color: #f9f9f9;
     border-radius: 8px;
     margin: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    flex: 1 1 calc(33.333%);
 }
 
 .project-image {
     width: 100%;
-    max-width: 300px;
+    max-width: 200px;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
 }
@@ -195,7 +201,7 @@ margin-top: 50px;
 
 .project-details h3 {
     margin: 0 0 10px 0;
-   font-weight: 500;
+    font-weight: 500;
     color: #333;
 }
 
@@ -208,13 +214,13 @@ margin-top: 50px;
 .project-link {
     text-decoration: none;
     color: #FF6400;
-
     margin-top: auto;
     align-self: flex-start;
 }
 
 .project-link:hover {
     text-decoration: underline;
+
 }
 
 
