--- a/css/index.css
+++ b/css/index.css
@@ -22,21 +22,22 @@ header{
 nav {
     display: flex;
     justify-content: center; 
-    align-items: center;
     background-color:#F3F2EF;
     border-bottom: 1px solid #C7C7C7;
     height: 80px;
     padding: 0 20px;
+    flex-direction: column;
 
    
 }
 
 .nav-links a {
+   
     color:black;
     text-decoration: none;
     margin: 0 15px;
     font-size: small;
-    padding: 10px; 
+    padding: 30px; 
 }
 
 .nav-links a:hover {
@@ -175,7 +176,6 @@ margin-top: 50px;
 
 
 
-
 .project-card {
    
     background-color: #f9f9f9;
@@ -221,6 +221,25 @@ margin-top: 50px;
 .project-link:hover {
     text-decoration: underline;
 
+}
+
+
+ @media (max-width: 675px) {
+    .nav-links {
+        flex-direction: column; 
+    }
+    .nav-links a {
+        width: 100%;
+    }
+    nav{
+    border-bottom:#fff;
+    height: 130px;
+
+    }
+    .nav-links a:hover{
+        border-bottom:hidden;
+  
+    }
 }
 
 
@@ -310,6 +329,7 @@ footer {
 .footer-bottom p {
     margin: 0;
 }
+
 
 
 
