--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,8 @@ header{
           
 }
 
+/* Navigaition*/
+
 
 nav {
     display: flex;
@@ -60,7 +62,7 @@ nav {
 }
 
 
-
+/* Headers */
 
 h1{
     color:rgb(8, 6, 6);
@@ -73,6 +75,8 @@ h2{
     text-align: center;
     margin-bottom: 30px;
 }
+
+/* Main */
 
 main{
     margin-top: 80px;
@@ -110,10 +114,17 @@ button:hover {
     background-color: #945DD6;
 }
 
+/* About section*/
+
 #about{
     margin-top: 30px;
     padding: 20px;
 }
+
+/* Experience section*/
+
+
+
 #experience {
     padding: 20px;
     background-color: #f9f9f9;
@@ -193,7 +204,7 @@ button:hover {
 
 
 
-
+/* Skills section*/
 
 #skills{
     margin-top: 30px;
@@ -261,7 +272,7 @@ button:hover {
 
 }
 
-
+/* Footer section*/
 
 footer{
     display: flex;
@@ -402,7 +413,7 @@ footer {
 /* Tablet styles */
 
 
-@media (max-width: 600px) {
+@media (min-width: 600px) {
     body{
         font-size:medium
       }
