--- a/css/index.css
+++ b/css/index.css
@@ -221,6 +221,7 @@ button:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     flex-wrap: wrap;
+    list-style-type: none;
 }
 
 
